--- a/operating-budget.html
+++ b/operating-budget.html
@@ -8,7 +8,8 @@
     <meta http-equiv="Expires" content="0" />
     <title></title>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet" />
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet" type="text/css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
     <style>
