--- a/hospital-report/index.html
+++ b/hospital-report/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="outer-container">
+    <div class="ui container">
       <div class="top-container">
         <div class="ui form">
           <div class="field">
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="bottom-container">
-        <div class="ui secondary pointing menu">
+        <div class="ui secondary pointing menu" id="tab-menu">
           <a class="item active" data-tab="financial-performance">
             Financial Performance
           </a>
@@ -44,23 +44,13 @@
           class="ui tab active"
           id="financial-performance"
           data-tab="financial-performance"
-        >
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-          </p>
-        </div>
-        <div class="ui tab" id="drg-analysis" data-tab="drg-analysis">
-          <p>
-            Soluta a quia aliquid, necessitatibus incidunt voluptates nulla amet
-            sit sed;
-          </p>
-        </div>
-        <div class="ui tab" id="location-analysis" data-tab="location-analysis">
-          <p>
-            Itaque tempore illo exercitationem quo laborum error tenetur
-            voluptatibus sint unde.
-          </p>
-        </div>
+        ></div>
+        <div class="ui tab" id="drg-analysis" data-tab="drg-analysis"></div>
+        <div
+          class="ui tab"
+          id="location-analysis"
+          data-tab="location-analysis"
+        ></div>
       </div>
     </div>
 
