--- a/finance-reports/operating-budget.html
+++ b/finance-reports/operating-budget.html
@@ -231,8 +231,24 @@
       var rawData, chartData;
       var filters = [];
 
+/*
       var color = [
         "#BEEBE9",
+        "#FFE3ED",
+        "#FFFDF9",
+        "#E9E1CC",
+        "#F4DADA",
+        "#FFFFDD",
+        "#CCEDD2",
+        "#B9CCED",
+        "#A7E9AF",
+        "#E1F4F3"
+      ];
+*/
+
+
+      var color = [
+        "#B8E3DF",
         "#FFE3ED",
         "#FFFDF9",
         "#E9E1CC",
