--- a/finance-reports/operating-budget.html
+++ b/finance-reports/operating-budget.html
@@ -248,16 +248,16 @@
 
 
       var color = [
-        "#B8E3DF",
-        "#FFE3ED",
-        "#FFFDF9",
+        "#b8e3df",
+        "#ebcfd6",
+        "#f5f0ea",
         "#E9E1CC",
-        "#F4DADA",
-        "#FFFFDD",
-        "#CCEDD2",
-        "#B9CCED",
-        "#A7E9AF",
-        "#E1F4F3"
+        "#ffd3d1",
+        "#f7f5d3",
+        "#c8e6ca",
+        "#97c7eb",
+        "#b6debf",
+        "#c3e7e8"
       ];
 
       var hoverColor = [
