--- a/resources-search/index.html
+++ b/resources-search/index.html
@@ -1,77 +1,78 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.27/jquery.autocomplete.min.js"></script>
-  <style>
-  .autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; width: 300px;}
-	.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
-	.autocomplete-selected { background: #F0F0F0; }
-	.autocomplete-suggestions strong { font-weight: bold; }
-	.autocomplete-group { padding: 2px 5px; }
-	.autocomplete-group strong { display: block; border-bottom: 1px solid #000; }
-  </style>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>City of Moline Example</title>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script type="text/javascript" src="data.js"></script>
+  <script>
+  $(function() {
+   //var availableTags = [{label:"Basic", the_link:"http://www.msn.com"},{label:"C++", the_link:"http://www.ibm.com"},{label:"Fortran", the_link:"http://www.yahoo.com"}];
+    $( "#tags" ).autocomplete({
+      source: resources,	
+      select: function(e,ui) { 
+      //console.log(ui);    // When you click (select) the ui object is returned , as well as the event
+       // You can get at the returned results ( the object via . (dot)  notation )
+      // location.href = ui.item.the_link;
+	window.open(ui.item.data, '_blank');
+	$(this).val(''); 
+	
+	return false;
+      }
+    });
+
+$('#tags').focus(function(){
+        $(this).val('');
+        $(this).keydown();
+    }); 
+
+$("#tags").on("input propertychange", function () {
+	$( "#spMoline" ).remove();
+    var html = '<span id="spMoline">Search Moline website for <a href="http://moline.il.us/Search?searchPhrase=' + $( "#tags" ).val() + '" target="_blank">' + $( "#tags" ).val() + '</a></span>';
+	$('.ui-widget').append(html);	
+});
+
+});
+
+</script>
 </head>
+<style>
+body {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 12px;	
+}
+
+ul {list-style: none; margin: 0; padding: 0;}
+li {width: 120px; padding-bottom: 20px;}
+
+.ui-menu-item {font-size: 12px; padding-bottom: 10px;}
+
+#tags {color: #cacaca;}
+
+a {color: #119eb9; text-decoration: none;}
+
+img {padding:0; width: 60px; display: block;}
+
+</style>
 <body>
-  <div class="container" style="padding:10px 10px;">
-	<div class="well">
-		<div class="row">
-		<form class="form-inline">
-			<div class="form-group col-sm-5">
-			  <label for="files">Search all resources</label>
-			  <input type="text" name="country" id="autocomplete"/>
-			</div>
-<!--
-			<div>
-				Selected Option : <span class="label label-default" id="selected_option"></span>
-			</div>
--->
-		</form>
-		</div>
-		
-	</div>
-  </div>
+
+<div style="width: 100%;">
+<h3>Quick links</h3>
+<ul>
+<li><a href="http://richd.org/" target="_blank"><img src="img/rchd1.jpg" /><span>Rock Island Health Department</span></a></li>
+<li><a href="http://www.dph.illinois.gov/topics-services/diseases-and-conditions/diseases-a-z-list/coronavirus" target="_blank"><img src="img/idph-logo.png" /><span>Illinois Health Department</span></a></li>
+<li><img src="img/1029px-Seal_of_Illinois.png" /><span><b>Governor's Office</b></span><br /><a href="https://www2.illinois.gov/sites/gov/newsroom/Pages/default.aspx" target="_blank">News Conferences</a><br /><a href="https://www2.illinois.gov/government/executive-orders" target="_blank">Executive Orders</a></li>
+<li><a href="http://www.coronavirus.gov" target="_blank"><img src="img/cdc.jpg" /><span>Coronavirus.gov</span></a></li>
+</ul>
+</div>
+
+<h3>Search all resources</h3>
+<div class="ui-widget" >
+  <!-- <label for="tags">Tags: </label> -->
+  <input id="tags" class="ui-autocomplete-input" value="Type keyword"/>
+</div>
+
 </body>
 </html>
-<script type="text/javascript" src="data.js"></script>
-<script type="text/javascript">
-  $(document).ready(function(){	
-	var arrayReturn = [];
-	$.ajax({
-		url: "http://jsonplaceholder.typicode.com/users",
-		async: true,
-		dataType: 'json',
-		success: function (data) {
-			/*
-			for (var i = 0, len = data.length; i < len; i++) {
-				var id = (data[i].id).toString();
-				arrayReturn.push({'value' : data[i].name, 'data' : id});
-			}
-
-			var countries = [
-			   { value: 'Andorra', data: 'AD' },
-			   // ...
-			   { value: 'Zimbabwe', data: 'ZZ' }
-			];
-			*/
-			
-			//send parse data to autocomplete function
-			//loadSuggestions(arrayReturn);
-			loadSuggestions(resources);
-			console.log(resources);
-			//console.log(arrayReturn);
-		}
-	});
-	function loadSuggestions(options) {
-		$('#autocomplete').autocomplete({
-			lookup: options,
-			onSelect: function (suggestion) {
-				//$('#selected_option').html(suggestion.value);
-				window.open(suggestion.data, '_blank'); 
-			}
-		});
-	}
-  });
-</script>
