--- a/resources-search/trial.html
+++ b/resources-search/trial.html
@@ -12,14 +12,21 @@
    //var availableTags = [{label:"Basic", the_link:"http://www.msn.com"},{label:"C++", the_link:"http://www.ibm.com"},{label:"Fortran", the_link:"http://www.yahoo.com"}];
     $( "#tags" ).autocomplete({
       source: resources,	
-      select:function(e,ui) { 
+      select: function(e,ui) { 
       //console.log(ui);    // When you click (select) the ui object is returned , as well as the event
        // You can get at the returned results ( the object via . (dot)  notation )
       // location.href = ui.item.the_link;
 	window.open(ui.item.data, '_blank');
-	$(this).val(''); return false;
+	$(this).val(''); 
+	
+	return false;
       }
     });
+
+$('#tags').focus(function(){
+        $(this).val('');
+        $(this).keydown();
+    }); 
 
 $("#tags").on("input propertychange", function () {
 	$( "#spMoline" ).remove();
@@ -37,24 +44,35 @@ body {
     font-size: 12px;	
 }
 
-ul {list-style: none; padding-left: 0;}
+ul {list-style: none; margin: 0; padding: 0;}
+li {width: 120px; padding-bottom: 20px;}
 
 .ui-menu-item {font-size: 12px; padding-bottom: 10px;}
 
+#tags {color: #cacaca;}
+
+a {color: #119eb9; text-decoration: none;}
+
+img {padding:0; width: 60px; display: block;}
+
 </style>
 <body>
-<div>
+
+<div style="width: 100%;">
 <h3>Quick links</h3>
 <ul>
-<li><a href="http://richd.org/" target="_blank">Rock Island Coronavirus Page</a></li>
-<li><a href="http://www.dph.illinois.gov/topics-services/diseases-and-conditions/diseases-a-z-list/coronavirus" target="_blank">Illinois Department of Health Page</a></li>
-<li><a href="http://www.coronavirus.gov" target="_blank">Coronavirus.gov</a></li>
+<li><a href="http://richd.org/" target="_blank"><img src="img/rchd1.jpg" /><span>Rock Island Health Department</span></a></li>
+<li><a href="http://www.dph.illinois.gov/topics-services/diseases-and-conditions/diseases-a-z-list/coronavirus" target="_blank"><img src="img/idph-logo.png" /><span>Illinois Health Department</span></a></li>
+<li><img src="img/1029px-Seal_of_Illinois.png" /><span><b>Governor's Office</b></span><br /><a href="https://www2.illinois.gov/sites/gov/newsroom/Pages/default.aspx" target="_blank">News Conferences</a><br /><a href="https://www2.illinois.gov/government/executive-orders" target="_blank">Executive Orders</a></li>
+<li><a href="http://www.coronavirus.gov" target="_blank"><img src="img/cdc.jpg" /><span>Coronavirus.gov</span></a></li>
 </ul>
 </div>
+
 <h3>Search all resources</h3>
-<div class="ui-widget">
+<div class="ui-widget" >
   <!-- <label for="tags">Tags: </label> -->
-  <input id="tags" class="ui-autocomplete-input" />
+  <input id="tags" class="ui-autocomplete-input" value="Type keyword"/>
 </div>
+
 </body>
 </html>
