changed path for images

--- a/resources-search/index.html
+++ b/resources-search/index.html
@@ -61,10 +61,10 @@ img {padding:0; width: 60px; display: block;}
 <div style="width: 100%;">
 <h3>Quick links</h3>
 <ul>
-<li><a href="http://richd.org/" target="_blank"><img src="img/rchd1.jpg" /><span>Rock Island Health Department</span></a></li>
-<li><a href="http://www.dph.illinois.gov/topics-services/diseases-and-conditions/diseases-a-z-list/coronavirus" target="_blank"><img src="img/idph-logo.png" /><span>Illinois Health Department</span></a></li>
-<li><img src="img/1029px-Seal_of_Illinois.png" /><span><b>Governor's Office</b></span><br /><a href="https://www2.illinois.gov/sites/gov/newsroom/Pages/default.aspx" target="_blank">News Conferences</a><br /><a href="https://www2.illinois.gov/government/executive-orders" target="_blank">Executive Orders</a></li>
-<li><a href="http://www.coronavirus.gov" target="_blank"><img src="img/cdc.jpg" /><span>Coronavirus.gov</span></a></li>
+<li><a href="http://richd.org/" target="_blank"><img src="/adnanmahmud/reports/blob/master/resources-search/img/rchd1.jpg" /><span>Rock Island Health Department</span></a></li>
+<li><a href="http://www.dph.illinois.gov/topics-services/diseases-and-conditions/diseases-a-z-list/coronavirus" target="_blank"><img src="/adnanmahmud/reports/blob/master/resources-search/img/idph-logo.png" /><span>Illinois Health Department</span></a></li>
+<li><img src="/adnanmahmud/reports/blob/master/resources-search/img/1029px-Seal_of_Illinois.png" /><span><b>Governor's Office</b></span><br /><a href="https://www2.illinois.gov/sites/gov/newsroom/Pages/default.aspx" target="_blank">News Conferences</a><br /><a href="https://www2.illinois.gov/government/executive-orders" target="_blank">Executive Orders</a></li>
+<li><a href="http://www.coronavirus.gov" target="_blank"><img src="/adnanmahmud/reports/blob/master/resources-search/img/cdc.jpg" /><span>Coronavirus.gov</span></a></li>
 </ul>
 </div>
 
