--- a/resources-search/index.html
+++ b/resources-search/index.html
@@ -46,7 +46,7 @@ body {
 }
 
 .quick-links {list-style: none; margin: 0; padding: 0;}
-.quick-links li {width: 150px; margin: 0 auto; padding-bottom: 20px; font-size: 1.25em;}
+.quick-links li {width: 150px; padding-bottom: 20px; font-size: 1.25em;}
 
 .ui-menu-item {font-size: 1em; padding-bottom: 10px;}
 
@@ -59,7 +59,7 @@ img {padding:0; width: 60px; display: block; margin: 0 auto;}
 </style>
 
 <body>
-<div style="width: 100%; position: relative; text-align: center;">
+<div style="width: 100%; position: relative;">
 <div>
 <h3>Quick Coronavirus Links</h3>
 <div>
