--- a/resources-search/index-marin.html
+++ b/resources-search/index-marin.html
@@ -72,7 +72,7 @@ h2 {font-size: 1.4em;}
 
 .ui-menu-item {font-size: 1em; padding-bottom: 10px;}
 
-#tags {color: #8a8a8a; font-size: 1.2em;}
+#tags {color: #8a8a8a; font-size: 1.2em; padding-left: 5px;}
 
 a {color: #119eb9; text-decoration: none;}
 
