--- a/resources-search/index-moline-search.html
+++ b/resources-search/index-moline-search.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>City of Moline Example</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
   <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
   <script type="text/javascript" src="data-moline.js"></script>
